--- a/contact.css
+++ b/contact.css
@@ -11,3 +11,24 @@ header, footer {
     text-align: center;
     padding: 1em 0;
 }
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-family: 'Lobster', cursive;
+}
+
+nav ul li a:hover {
+    color: #ff6347;
+}
