--- a/contact.css
+++ b/contact.css
@@ -32,3 +32,13 @@ nav ul li a {
 nav ul li a:hover {
     color: #ff6347;
 }
+
+main {
+    text-align: center;
+    padding: 20px;
+}
+
+img {
+    width: 50%;
+    height: auto;
+}
